--- a/junior/intro-section-with-dropdown-navigation/output.css
+++ b/junior/intro-section-with-dropdown-navigation/output.css
@@ -879,7 +879,7 @@ body {
   }
 }
 
-.dropdown-menu:hover .dropdown-toggler::after {
+.dropdown-menu:hover .dropdown-toggler::after, .dropdown-menu .dropdown-toggler.active::after {
   content: url('images/icon-arrow-up.svg');
 }
 
